fixed mobile height overlapping

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -160,10 +160,13 @@ html {
   padding: 0;
   user-select: none; }
 
+html {
+  height: 100%; }
+
 body {
   background: #4ca2ab;
   background: radial-gradient(circle, rgba(0, 0, 0, 0.01) 0%, black 200%), linear-gradient(135deg, #4ca2ab 0%, #17874c 100%);
-  height: 100vh;
+  height: 100%;
   overflow: hidden; }
 
 .hidden {
